--- a/backend/index.html
+++ b/backend/index.html
@@ -26,6 +26,23 @@
                         <input type="email" placeholder="Entre com seu email" required/>
                         <i class="uil uil-envelop-alt email"></i>
                     </div>
+                    <div class="input_box">
+                        <input type="password" placeholder="Entre com sua senha" required/>
+                        <i class="uil uil-lock password"></i>
+                        <i class="uil uil-eye-slash pw_hide"></i>
+                    </div>
+
+                    <div class="option_field">
+                        <span class="checkbox">
+                            <input type="checkbox" id="check"/>
+                            <label for="check"> Lembrar-me</label>
+                        </span>
+                        <a href="#" class="forgot_pw">Esqueceu sua senha?</a>
+
+                        <button class="button">Entrar agora</button>
+
+                        <div class="login_signup">Nao possui uma conta? <a href="#" id="signup">Registre-se</a></div>
+                    </div>
                 </form>
             </div>
         </div>
