--- a/backend/index.html
+++ b/backend/index.html
@@ -38,12 +38,36 @@
                             <label for="check"> Lembrar-me</label>
                         </span>
                         <a href="#" class="forgot_pw">Esqueceu sua senha?</a>
-
+                    </div>
                         <button class="button">Entrar agora</button>
 
                         <div class="login_signup">Nao possui uma conta? <a href="#" id="signup">Registre-se</a></div>
-                    </div>
                 </form>
+            </div>
+
+            <!--Tela de registro-->
+            <div class="form signup_form">
+                <form action="#">
+                    <h2>Registre-se</h2>
+                    <div class="input_box">
+                        <input type="email" placeholder="Entre com seu email" required />
+                        <i class="uil uil-envelope-alt email"></i>
+                    </div>
+                    <div class="input_box">
+                        <input type="password" placeholder="Defina uma senha" required />
+                        <i class="uil uil-lock password"></i>
+                        <i class="uil uil-eye-slash pw_hide"></i>
+                    </div>
+                    <div class="input_box">
+                        <input type="password" placeholder="Confirme sua senha" required>
+                        <i class="uil uil-lock password"></i>
+                        <i class="uil uil-eye-slash pw_hide"></i>
+                    </div>
+
+                    <button class="button">Completar Registro</button>
+                    
+                    <div class="login_signup">Ja possui conta? <a href="#" id="login">Login</a></div>
+                </form>     
             </div>
         </div>
     </section>
