correcao no index

--- a/backend/index.html
+++ b/backend/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <header class="header">
-        <nav class="nav_logo">CodeRunner 
+        <nav class="nav">
+            <a href="#" class="nav_logo">CodeRunner</a>
             <button class="button" id="form-open">Login</button>
         </nav>
     </header>
