--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeRunner</title>
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
     <link rel="stylesheet" href="style.css">
 <body>
     <header class="header">
@@ -13,7 +14,6 @@
             <button class="button" id="form-open">Login</button>
         </nav>
     </header>
-
     <section class="home">
         <div class="form_container">
             <i class="uil uil-times form_close"></i>
@@ -109,270 +109,5 @@ loginBtn.addEventListener("click", (e) => {
 
 </script>
 
-<style>
-    /* Importando a font do google - poppins */
-
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
-
-/* formatando page */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-}
-
-/* Removendo quaisquer textos sublinhados */
-a {
-    text-decoration: none;
-}
-
-.header {
-    position: fixed;
-    height: 80px;
-    width: 100%;
-    z-index: 100;
-    padding: 0 20px;
-}
-
-.nav {
-    max-width: 1100px;
-    width: 100%;
-    margin: 0 auto;
-}
-
-.nav,
-.nav_item {
-    display: flex;
-    height: 100%;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.nav_logo,
-.nav_link,
-.button {
-  color: #fff;
-}
-.nav_logo {
-  font-size: 25px;
-}
-.nav_item {
-  column-gap: 25px;
-}
-.nav_link:hover {
-  color: #d9d9d9;
-}
-
-.header .button {
-    --color: #3E0102;
-    background-color: transparent;
-    display: inline-block;
-    width: 8em;
-    height: 2.6em;
-    line-height: 2.5em;
-    margin: 20px;
-    position: relative;
-    overflow: hidden;
-    border: 1px solid white;
-    transition: color .5s;
-    z-index: 1;
-    font-size: 17px;
-    border-radius: 30px;
-    color: #ffffff;
-    cursor: pointer;
-}
-.header .button:before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    background: var(--color);
-    height: 150px;
-    width: 200px;
-    border-radius: 50%;
-}
-
-.header .button:hover {
-    color: #fff;
-}
-   
-.header .button:before {
-    top: 100%;
-    left: 100%;
-    transition: all .7s;
-}
-
-.header .button:hover:before {
-    top: -30px;
-    left: -30px;
-}
-
-.header .button:active:before {
-    background:var(--color);
-    transition: background 0s;
-}
-
-
-
-/* Tela inicial */ 
-.home {
-    position: relative;
-    height: 100vh;
-    width: 100%;
-    background-image: url(/PainelCrud/backend/background.jpg);
-    background-size: cover;
-    background-position: center;
-}
-/* propriedade z-index serve para colocar elementos na frente de outros */
-.home::before {
-    content: "";
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    z-index: 100;
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.5s ease-out;
-}  
-/* Pseudo elementos para cobrir classes */
-.home.show::before {
-    opacity: 1;
-    pointer-events: auto;
-}
-
-/* Estilizando o formulario */
-
-.form_container {
-    position: fixed;
-    max-width: 320px;
-    width: 100%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1.2);
-    z-index: 101;
-    background: #fff;
-    padding: 25px;
-    border-radius: 12px;
-    box-shadow: rgba(0, 0, 0, 0.1);
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.4s ease-out;
-}
-
-.home.show .form_container {
-    opacity: 1;
-    pointer-events: auto;
-    transform: translate(-50%, -50%) scale(1);
-}
-.signup_form {
-    display: none;
-}
-.form_container.active .signup_form {
-    display: block;
-}
-.form_container.active .login_form {
-    display: none;
-}
-.form_close {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    color: #0b0217;
-    font-size: 22px;
-    opacity: 0.7;
-    cursor: pointer;
-}
-  .form_container h2 {
-    font-size: 22px;
-    color: #0b0217;
-    text-align: center;
-}
-  .input_box {
-    position: relative;
-    margin-top: 30px;
-    width: 100%;
-    height: 40px;
-}
-.input_box input {
-    height: 100%;
-    width: 100%;
-    border: none;
-    outline: none;
-    padding: 0 30px;
-    color: #333;
-    transition: all 0.2s ease;
-    border-bottom: 1.5px solid #aaaaaa;
-}
-.input_box input:focus {
-    border-color: #7d2ae8;
-}
-.input_box i {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 20px;
-    color: #707070;
-}
-.input_box i.email,
-.input_box i.password {
-    left: 0;
-}
-
-.input_box.usericon 
-{
- background-color: #7d2ae8;
-}
-.input_box input:focus ~ i.email,
-.input_box input:focus ~ i.password {
-    color: #7d2ae8;
-  }
-.input_box i.pw_hide {
-    right: 0;
-    font-size: 18px;
-    cursor: pointer;
-}
-.option_field {
-    margin-top: 14px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.form_container a {
-    color: #3E0102;
-    font-size: 12px;
-}
-.form_container a:hover {
-    text-decoration: underline;
-}
-.checkbox {
-    display: flex;
-    column-gap: 8px;
-    white-space: nowrap;
-}
-.checkbox input {
-    accent-color: #3E0102;
- }
-.checkbox label {
-    font-size: 12px;
-    cursor: pointer;
-    user-select: none;
-    color: #0b0217;
-}
-.form_container .button {
-    background: #3E0102;
-    margin-top: 30px;
-    width: 100%;
-    padding: 10px 0;
-    border-radius: 10px;
-}
-.login_signup {
-    font-size: 12px;
-    text-align: center;
-    margin-top: 15px;
-}
-   
- 
-</style>
 </body>
 </html>
