--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -19,15 +19,15 @@
             <i class="uil uil-times form_close"></i>
             <!--Formulario do login-->
             <div class="form login_form">
-                <form action="#">
+                <form action="/login" method="POST">
                     <h2>Login</h2>
                     <div class="input_box">
-                        <input type="email" placeholder="Entre com seu email" required/>
+                        <input type="email" name="email" placeholder="Entre com seu email" required/>
                         <i class="uil uil-envelop-alt email"></i>
                         <i class="uil uil-envelope-alt email"></i>
                     </div>
                     <div class="input_box">
-                        <input type="password" placeholder="Entre com sua senha" required/>
+                        <input type="password" name="senha" placeholder="Entre com sua senha" required/>
                         <i class="uil uil-lock password"></i>
                         <i class="uil uil-eye-slash pw_hide"></i>
                     </div>
@@ -39,7 +39,7 @@
                         </span>
                         <a href="#" class="forgot_pw">Esqueceu sua senha?</a>
                     </div>
-                        <button class="button">Entrar agora</button>
+                        <button class="button" href="logado.html"> Entrar agora</button>
 
                         <div class="login_signup">Nao possui uma conta? <a href="#" id="signup">Registre-se</a></div>
                 </form>
