--- a/backend/public/PageAdmin.html
+++ b/backend/public/PageAdmin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pi">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="admin.css">
 </head>
-<body>
+<body> 
+    <input type="checkbox" name="" id="sidebar-toggle">
     <div class="sidebar">
         <div class="siderbar-brand">
             <div class="brand-flex">
@@ -78,7 +79,7 @@
     <div class="main-content">
         <header>
             <div class="menu-toglle">
-                <label for="">
+                <label for="sidebar-toggle">
                     <span class="las la-bars"></span>
                 </label>
             </div>
@@ -92,11 +93,11 @@
         <main>
             <div class="page-header">
                 <div>
-                    <h1>Pagina Inicial</h1>
-                    <small>website voltado para estudo e treino</small>
+                    <h1>Gestao administrativa</h1>
+                    <small>Infos</small>
                 </div>
                 
-                <div>
+                <div class="header-actions">
                     <button>
                         <span class="las la-file-export"></span>
                         Export
@@ -106,6 +107,56 @@
                         Config
                     </button>
                 </div>
+            </div>
+            <div class="cards">
+                <div class="card-single">
+                    <div class="card-flex">
+                        <div class="card-info">
+                            <div class="card-head">
+                                <span>Refunds</span>
+                                <small>value of refunded orders </small>
+                            </div>
+                            <h2>R$ 4.333,22</h2>
+                            <small>2% less purchase</small>
+                        </div>
+                        <div class="card-chart sucess">
+                            <span class="las la-chart-line"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-single">
+                    <div class="card-flex">
+                        <div class="card-info">
+                            <div class="card-head">
+                                <span>Unique Visitors</span>
+                                <small>Number of visitors</small>
+                            </div>
+                            <h2>R$ 17,663</h2>
+                            <small>2% let a visitors</small>
+                        </div>
+                        <div class="card-chart danger">
+                            <span class="las la-chart-line"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-single">
+                    <div class="card-flex">
+                        <div class="card-info">
+                            <div class="card-head">
+                                <span>Unique Visitors</span>
+                                <small>Number of visitors</small>
+                            </div>
+                            <h2>R$ 17,663</h2>
+                            <small>2% let a visitors</small>
+                        </div>
+                        <div class="card-chart">
+                            <span class="las la-chart-line"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="Page-principal">
+                <h2>Customizar depois</h2>
             </div>
         </main>
     </div>
