--- a/backend/public/PageAdmin.html
+++ b/backend/public/PageAdmin.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Admin</title>
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
     <link rel="stylesheet" href="admin.css">
 </head>
 <body> 
@@ -33,13 +34,13 @@
             <div class="sidebar-menu">
                 <div class="menu-block">
                     <div class="menu-head">
-                        <span>DashBoard</span>
+                        <span>Backend</span>
                     </div>
                     <ul>
                         <li>
                             <a href="">
-                                <span class="las la-balance-scale"></span>
-                                Database
+                                <span class="uil uil-database"></span>
+                                Databases
                             </a>
                         </li>
                         <li>
@@ -51,44 +52,58 @@
                     </ul>
 
                     <div class="menu-head">
-                        <span>Templates</span>
+                        <span>Frontend</span>
                     </div>
                     <ul>
                         <li>
                             <a href="">
-                                <span class="las la-balance-scale"></span>
-                                Frontend
+                                <span class="uil uil-brush-alt"></span>
+                                Templates
                             </a>
                         </li>
                         <li>
                             <a href="">
-                                <span class="la la-chart-pie"></span>
-                                React
+                                <span class="uil uil-book-alt"></span>
+                                Scripts Diversos
                             </a>
                         </li>
                         <li>
                             <a href="">
-                                <span class="la la-chart-pie"></span>
-                                Ecommerce projeto
+                                <span class="uil-10-plus uil-money-bill"></span>
+                                Finanças
                             </a>
                         </li>
+                    </ul>
+
+                    <div class="menu-head">
+                        <span>Projetos</span>
+                    </div>
+                    <ul>
+                        <li>
+                            <a href="">
+                                <span class="uil uil-moneybag"></span>
+                                Ecommerce
+                            </a>
+                        </li>
+                    </ul>
+
                 </div>
             </div>
         </div>
     </div>
     <div class="main-content">
         <header>
-            <div class="menu-toglle">
+            <div class="menu-toggle">
                 <label for="sidebar-toggle">
-                    <span class="las la-bars"></span>
+                    <span class="uil uil-arrow-from-right"></span>
                 </label>
             </div>
-
-            <div>
-                <span class="las la-search"></span>
-                <span class="las la-bookmark"></span>
-                <span class="las la-sms"></span>
-            </div>
+            <div class="search-bar">
+                <form>
+                  <input type="text" placeholder="Pesquisar...">
+                  <button type="submit">Buscar</button>
+                </form>
+              </div>
         </header>
         <main>
             <div class="page-header">
