--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -95,28 +95,15 @@
 
     </section>
 
-    <main class="paralax">
-        <h2>estilizar aqui</h2>
-        <h2>estilizar aqui</h2>
-        <h2>estilizar aqui</h2>
-        <h2>estilizar aqui</h2>
-        <h2>estilizar aqui</h2>
-        <h2>estilizar aqui</h2>
-        <h2>estilizar aqui</h2>
-        <h2>estilizar aqui</h2>
-        <h2>estilizar aqui</h2>
-        <h2>estilizar aqui</h2>
-        <h2>estilizar aqui</h2>
-        <h2>estilizar aqui</h2>
-        <h2>estilizar aqui</h2>
-        <h2>estilizar aqui</h2>
-        <h2>estilizar aqui</h2>
-        <h2>estilizar aqui</h2>
-        <h2>estilizar aqui</h2>
-        <h2>estilizar aqui</h2>
-        <h2>estilizar aqui</h2>
-    </main>
-
+    <footer class="footer">
+        <h2>teste</h2>
+        <h2>teste</h2>
+        <h2>teste</h2>
+        <h2>teste</h2>
+        <h2>teste</h2>
+        <h2>teste</h2>
+        <h2>teste</h2>
+    </footer>
 
 
 
