--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -96,15 +96,40 @@
     </section>
 
     <footer class="footer">
-        <h2>teste</h2>
-        <h2>teste</h2>
-        <h2>teste</h2>
-        <h2>teste</h2>
-        <h2>teste</h2>
-        <h2>teste</h2>
-        <h2>teste</h2>
-    </footer>
-
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Sobre mim</h4>
+                    <ul>
+                        <li><a href="#">Portfolio</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Duvidas</h4>
+                    <ul>
+                        <li><a href="#">contate-me</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Projeto</h4>
+                    <ul>
+                        <li><a href="#">Sobre o projeto</a></li>
+                
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Redes Sociais</h4>
+                    <div class="social-links">
+                        <a href="#"><i class="uil uil-facebook"></i></a>
+                        <a href="#"><i class="uil uil-instagram"></i></a>
+                        <a href="#"><i class="uil uil-linkedin"></i></a>
+                        <a href="#"><i class="ui uil-github"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+   </footer>
+ 
 
 
 
