--- a/backend/public/PageAdmin.html
+++ b/backend/public/PageAdmin.html
@@ -56,7 +56,7 @@
                     </div>
                     <ul>
                         <li>
-                            <a href="">
+                            <a href="./template.html">
                                 <span class="uil uil-brush-alt"></span>
                                 Templates
                             </a>
