--- a/backend/public/PageAdmin.html
+++ b/backend/public/PageAdmin.html
@@ -80,7 +80,7 @@
                     </div>
                     <ul>
                         <li>
-                            <a href="">
+                            <a href="Ecommerce.html">
                                 <span class="uil uil-moneybag"></span>
                                 Ecommerce
                             </a>
