--- a/backend/public/pages/PageAdmin.html
+++ b/backend/public/pages/PageAdmin.html
@@ -7,7 +7,7 @@
     <title>Page Admin</title>
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
-    <link rel="stylesheet" href="admin.css">
+    <link rel="stylesheet" href="/css/admin.css">
 </head>
 <body> 
     <input type="checkbox" name="" id="sidebar-toggle">
