--- a/backend/public/pages/Template.html
+++ b/backend/public/pages/Template.html
@@ -13,7 +13,7 @@
             <nav>
                 <h1>Sidebars - Navbars - Cards</h1>
                 <a href="./Sidebars/Navbar-Header.html">NavBar-Header (Darkmode)</a>
-                <a href="./selecionandoElementos2.html">Selecionando Elementos #02</a>
+                <a href="./Sidebars/Product-darkmode.html">Produto - Darkmode</a>
                 <a href="./selecionandoElementos3.html">Selecionando Elementos #03</a>
                 <a href="./selecionandoElementos4.html">Selecionando Elementos #04</a>
                 <a href="./acessandoAtributos1.html">Acessando Atributos #01</a>
@@ -28,8 +28,8 @@
                 <a href="./trabalhandoComEventos4.html">Trabalhando c/ Eventos #04</a>
             </nav>
             <nav>
-                <h1>Paginas Completas</h1>
-                <a href="./selecionandoElementos1.html">Formulario + Banco de dados</a>
+                <h1>Manipulacao de DOM</h1>
+                <a href="./DOM/SlideCard.html">Slides de imagens</a>
                 <a href="./selecionandoElementos2.html">Selecionando Elementos #02</a>
                 <a href="./selecionandoElementos3.html">Selecionando Elementos #03</a>
                 <a href="./selecionandoElementos4.html">Selecionando Elementos #04</a>
